<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Passwords</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_path">Path</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_password">Password</string>
    <string name="action_accept">Accept</string>
    <string name="action_new">New</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_remove">Remove</string>
    <string name="action_discard">Discard</string>
    <string name="lowercase">abcdefghijklmnopqrstuvwxyz</string>
    <string name="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits">0123456789</string>
    <string name="symbols">~!@#$%^&amp;*</string>
    <string name="action_show">Show</string>
    <string name="action_copy">Copy</string>
    <string name="new_master_password">Enter new master password</string>
</resources>
