<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item 
        android:id="@+id/action_accept" 
        android:icon="@drawable/ic_action_accept" 
        android:showAsAction="ifRoom" 
        app:showAsAction="ifRoom" 
        android:title="@string/action_accept"/>
    <item 
        android:id="@+id/action_show" 
        android:checked="false" 
        android:title="@string/action_show" 
        android:checkable="true"/>
    <item 
        android:id="@+id/action_shuffle" 
        android:title="@string/action_shuffle" 
        android:icon="@drawable/ic_action_shuffle"/>
    <item 
        android:id="@+id/action_discard" 
        android:icon="@drawable/ic_action_discard" 
        android:showAsAction="ifRoom" 
        app:showAsAction="ifRoom" 
        android:title="@string/action_discard" android:visible="false"/>
    <item android:id="@+id/action_copy" android:title="@string/action_copy"></item>
    
</menu>
